--- a/hooks/src/App.scss
+++ b/hooks/src/App.scss
@@ -62,6 +62,10 @@ form {
   margin-right: auto;
   padding: 1em;
 }
+
+h1{
+  --color: #233329
+}
 form input {
   margin-bottom: 1rem;
   background: #fff;
